updated paradigm row gap class, removed stem ending + case ending paradigm, added square of stops paradigm, updated paradigm names, updated header classes, updated word page lexical form font class, updated styles

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ body {
 	background-color: #222;
 }
 
-p, a {
+p, a, pre {
 	margin: 0;
 	color: white;
 	text-align: center;
